downstream updates from nostr-java-core eventIf refactor